scrape on-click working

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
             </li>
           </ul>
           <span class="navbar-text">
-            <button class="btn btn-outline-success" type="button">Scrape Articles</button>
+            <button class="btn btn-outline-success" type="button" id="scrapeMe">Scrape Articles</button>
           </span>
         </div>
       </nav>
@@ -38,8 +38,8 @@
           <div class="carousel-item active">
             <img class src="coffeenews3.jpg" alt="First slide">
             <div class="carousel-caption purple left-align">
-                <h1 style="font-size: 40pt">Breaking News</h1>
-                <h3>From the Orlando Sentinel</h3>
+                <h1 style="font-size: 40pt">What's New </h1>
+                <h3>From the Food Network</h3>
               </div>
           </div>
 
